PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/Function_declarations.pf
module DataStructures{

    Int x = 9

    fun foo(Int input):Int{
        return input + 2
    }

    fun foo2(Int input, Int input2):Int{
        return input + input2
    }

    fun foo3(Int input, Int input2):Int{
        Int sum
        sum = input + input2
        return sum
    }

    mainFun(){
        print(foo(x))
        print(foo2(x, x))
        print(foo3(x, x))
    }
}