PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Invalid_Branch_single_else.pf
module DataStructures{

    Int x = 9

    mainFun(){
        else {
            print(x)
        }
    }
}